the terms of the GNU Free Documentation License, Version 1.3 or any later
version published by the Free Software Foundation; with no Invariant Sections,
no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
in the sources of this package and additionally can be obtained from Internet
<https://www.gnu.org/licenses>.

* [2018-11-25] RFC4880: added support of Preferred AEAD Algorithms [RFC 4880bis]
* [2018-11-23] RFC4880: added output for key usage "timestamping" [RFC 4880bis]
* [2018-11-21] RFC4880: changed tmcg_openpgp_byte_t: unsigned char -> uint8_t
* [2018-11-18] RFC4880: added PacketAeadEncode() [RFC 4880bis]
* [2018-11-18] RFC4880: added SymmetricDecryptAEAD() and SymmetricEncryptAEAD()
* [2018-11-12] changed formula for TMCG_MAX_KEYBITS (increased by factor 2)
* [2018-11-12] mpz_srandom: bugfix in Botan code branch of mpz_grandomb()
* [2018-11-11] release 1.3.15 of LibTMCG
* [2018-11-10] RFC4880: size changed for revocationkey_fingerprint [RFC 4880bis]
* [2018-11-10] RFC4880: fixes accumulation of key flags and features
* [2018-11-02] RFC4880: decreased lower bound for x to 245 bits in Weak()
* [2018-11-02] mpz_srandom: cleaned tmcg_mpz_grandomm() and tmcg_mpz_grandomb()
* [2018-11-02] mpz_srandom: changed interface of tmcg_mpz_ssrandomm_cache()
* [2018-11-01] RFC4880: added Export() for TMCG_OpenPGP_Prvkey
* [2018-10-30] RFC4880: added generic VerifyData() for TMCG_OpenPGP_Signature
* [2018-10-29] RFC4880: store included signatures within TMCG_OpenPGP_Message
* [2018-10-29] RFC4880: removed interface CheckMDC() from TMCG_OpenPGP_Message
* [2018-10-28] RFC4880: include MDC verification in function Decrypt()
* [2018-10-28] RFC4880: fixes the selected data/packets for computing the MDC
* [2018-10-25] aiounicast_select: handle error EINTR during call of select
* [2018-10-21] t-rfc4880: check libgcrypt version before testing Ed25519 key
* [2018-10-10] RBC: used some standard exceptions for error handling