@@ -7,6 +7,8 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2018-12-02] changed constant TMCG_MAX_CARDS (decreased by factor 2)
+* [2018-12-02] changed formulas for TMCG_MAX_VALUE_CHARS and TMCG_MAX_KEY_CHARS
 * [2018-11-25] RFC4880: added support of Preferred AEAD Algorithms [RFC 4880bis]
 * [2018-11-23] RFC4880: added output for key usage "timestamping" [RFC 4880bis]
 * [2018-11-21] RFC4880: changed tmcg_openpgp_byte_t: unsigned char -> uint8_t
